# Kovi

./: Cargo.toml  README.md  README_Cargo.md  README_EN.md  README_zh.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
kovi-runtime/: Cargo.toml
src/: bot.rs  cmd.rs  error.rs  expand.rs  lib.rs  log.rs  logger.rs  main.rs  mpsc.rs  plugin.rs  runtime.rs  task.rs  types.rs  utils.rs
src/bot/: connect.rs  controller.rs  default_plugin.rs  event.rs  handler.rs  message.rs  plugin_builder.rs  run.rs  runtimebot.rs
src/bot/event/: msg_event.rs  request_event.rs
src/bot/message/: add.rs
src/bot/plugin_builder/: event.rs
src/bot/plugin_builder/event/: msg_event.rs  notice_event.rs  request_event.rs
src/bot/runtimebot/: api.rs  kovi_api.rs  onebot_api.rs
src/cmd/: add.rs  new_kovi.rs  new_plugin.rs
src/expand/: lagrange.rs
src/mpsc/: oneshot.rs
src/plugin/: dylib_plugin.rs  plugin_builder.rs
src/plugin/plugin_builder/: listen.rs
