[package]
name = "kovi"
version = "0.8.0-rc3"
edition = "2021"
description = "A OneBot V11 bot plugin framework"
license = "MPL-2.0"
authors = ["Threkork <threkork@hotmail.com>"]
repository = "https://github.com/Threkork/Kovi"
readme = "README_Cargo.md"
documentation = "https://threkork.github.io/kovi-doc/"
keywords = ["kovi"]

[lib]
name = "kovi"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
anstyle = "1"
kovi-macros = "0.3.0"
regex = "1.10"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "color",
], optional = true }
tokio = { version = "1", features = ["full", "windows-sys"] }
tokio-tungstenite = "0.24.0"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
toml = "0.8"
croner = "2"
rand = "0.8.5"


[features]
default = ["logger"]
logger = ["env_logger"]
cqstring = []
