[package]
name = "kovi"
version = "0.10.1"
edition = "2021"
description = "A OneBot V11 bot plugin framework"
license = "MPL-2.0"
authors = ["Threkork <threkork@hotmail.com>"]
repository = "https://github.com/Threkork/Kovi"
readme = "README_Cargo.md"
documentation = "https://threkork.github.io/kovi-doc/"
keywords = ["kovi", "onebot", "framework"]

[lib]
name = "kovi"
path = "src/lib.rs"

[dependencies]
regex = "1.10"
chrono = "0.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
anstyle = "1"
kovi-macros = "0.4"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "color",
], optional = true }
tokio = { version = "1", features = ["full", "windows-sys"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
toml = "0.8"
toml_edit = "0.22"
croner = "2"
rand = "0.8"
ahash = "0.8"
parking_lot = "0.12"


[features]
default = ["logger", "native-tls"]
logger = ["env_logger"]
cqstring = []
message_sent = []
native-tls = [
    "reqwest/native-tls-vendored",
    "tokio-tungstenite/native-tls-vendored",
]
rustls-tls = ["reqwest/rustls-tls", "tokio-tungstenite/rustls-tls-native-roots"]
