[package]
name = "kovi"
version = "0.12.0"
edition = "2024"
description = "A OneBot V11 bot plugin framework"
license = "MPL-2.0"
authors = ["Threkork <threkork@hotmail.com>"]
repository = "https://github.com/Threkork/Kovi"
readme = "README_Cargo.md"
documentation = "https://threkork.github.io/kovi-doc/"
keywords = ["kovi", "onebot", "framework"]

[lib]
name = "kovi"
path = "src/lib.rs"

[dependencies]
regex = "1"
chrono = "0.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
anstyle = "1"
# kovi-macros = { version = "0.5.1", git = "https://github.com/Threkork/kovi-macros.git", rev = "10391f4" }
kovi-macros = { version = "0.5.1", path = "../kovi-macros" }
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "color",
], optional = true }
tokio = { version = "1", features = ["full", "windows-sys"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
http = "1"
toml = "0.8"
toml_edit = "0.22"
croner = "2"
rand = "0.8"
ahash = "0.8"
parking_lot = "0.12"
libloading = { version = "0.8", optional = true }


[features]
default = [
    "logger",
    "save_bot_status",
    "plugin-access-control",
    "message_sent",
    # "dylib-plugin",
    "dylib-runtime",
]
logger = ["env_logger"]
save_bot_status = ["save_bot_admin", "save_plugin_status"]
save_bot_admin = []
save_plugin_status = []
plugin-access-control = []

message_sent = []
cqstring = []

dylib-plugin = ["kovi-macros/dylib"]
dylib-runtime = ["libloading"]

native-tls-vendored = ["tokio-tungstenite/native-tls-vendored"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
